# gdx_dispatch_plugins

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml  contract.yml
gdx-plugin-example/: pyproject.toml
gdx-plugin-example/gdx_plugin_example/: __init__.py  models.py  router.py  ui.py
gdx-plugin-hvac/: pyproject.toml
gdx-plugin-hvac/gdx_plugin_hvac/: __init__.py
gdx-plugin-hvac/tests/: test_manifest_shape.py
