[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gdx-plugin-hvac"
version = "0.1.0"
description = "Reference ADR-015 Catalog Pack — contributes an HVAC catalog type + pricing strategy as data (no router, no models, no browser JS)."
requires-python = ">=3.11"

# Registers under the gdx.modules entry-point group so plugin-host discovery
# finds it after `pip install`. A Catalog Pack carries DATA (catalog_types +
# pricing_strategies), not a router — it has no API surface of its own.
[project.entry-points."gdx.modules"]
hvac = "gdx_plugin_hvac:manifest"

# No runtime dependency on `gdx_dispatch`: the plugin contract
# (gdx_dispatch.plugin_api) is provided by the plugin-host image at runtime, and
# reconcile.py pip-installs only this plugin into /plugins. To import/run the
# plugin during local development you need core on PYTHONPATH — see README.

[tool.setuptools]
packages = ["gdx_plugin_hvac"]
